# tracker-bot

./: .env.example  .gitignore  Cargo.toml  README.md
discord/: Cargo.toml
discord/src/: main.rs  tracker.rs
src/: main.rs  tracker.rs
website/: Cargo.toml  README.md  start.sh  website.service
website/migrations/: 20260616082435_create_file_table.sql
website/src/: app.rs  error.rs  main.rs  state.rs
website/src/db/: postgres.rs
website/src/frontend/: handlers.rs  routes.rs
website/src/uploads/: handlers.rs  mod.rs  models.rs  queries.rs  routes.rs
website/static/: audioplayer.js  style.css  upload.js
