[package]
name = "tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
dotenvy = "0.15.7"
serenity = { version = "0.12", features = [
    "collector", # await interactions on msgs
    "builder",
    "cache",
    "chrono",
    "client",
    "framework",
    "gateway",
    "http",
    "simd_json",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
pretty_env_logger = "0.5.0"
reqwest = "0.13.4"
scraper = "0.27.0"
anyhow = "1.0.102"
poise = "0.6.2"
tracing = "0.1.44"

# [dependencies]
# macros = { path = "../macros" }
# shared = { path = "../shared" }
