[package]
name = "website"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["macros", "multipart"] }
tokio = { version = "1.52", features = ["full"] }
tower = "0.5.3"
tracing = "0.1.44"
log = "0.4"
dotenvy = "0.15.7"
pretty_env_logger = "0.5.0"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["serde", "v7"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "migrate",
    "uuid",
    "chrono"
] }

maud = "0.27.0"
anyhow = "1.0.102"
sanitize-filename = "0.6.0"
