[package]
name = "website"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["macros", "multipart"] }
tokio = { version = "1.52", features = ["full"] }
tower = "0.5.3"
tracing = "0.1.44"
dotenvy = "0.15.7"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["serde", "v7"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "migrate",
    "uuid",
    "time",
    "derive"
] }
maud = { version = "0.27.0", features = ["axum"] }
anyhow = "1.0.102"
sanitize-filename = "0.6.0"
time = { version = "0.3.49", features = ["serde"] }
nanoid = "0.5.0"
blake3 = "1.8.5"
tower-http = { version = "0.7.0", features = ["fs"] }
